--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.23
+@version        1.0.24
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -264,7 +264,8 @@ cite, /* Wikipedia quote */
 [style='padding-left: 38px; color:#333;'],
 .category-redirect-header, /* https://commons.wikimedia.org/wiki/Category:Rakaw */
 .category-redirect-header + div, /* https://commons.wikimedia.org/wiki/Category:Rakaw */
-#mw-category-empty /* https://commons.wikimedia.org/wiki/Category:Rakaw */
+#mw-category-empty, /* https://commons.wikimedia.org/wiki/Category:Rakaw */
+#wdinfobox + .multilingual /* Top text at https://commons.wikimedia.org/wiki/Category:Rakaŭ */
 {
 	color: #bbb !important;
 }
