Wikipedia: diff fix

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.33
+@version        1.0.34
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -823,9 +823,21 @@ div[style='background-color:#d4e4f4;'],
 	text-shadow: none;
 }
 
+.diff-deletedline .diffchange,
+.mw-diff-inline-changed del
+{
+	background: #411 !important;
+}
 .diffchange {
-	background: 0 !important;
-	border: 15px dashed green;
+	background: #242 !important;
+}
+.mw-diff-inline-changed ins
+{
+	/* https://be.wikipedia.org/w/index.php?title=Новая_зямля_(паэма)&diff=prev&oldid=4680402 */
+	background: #242;
+}
+.mw-diff-table-prefix .mw-diff-inline-legend .mw-diff-inline-legend-ins {
+	color: #bbb;
 }
 
 /* https://be.wikisource.org/wiki/Новая_зямля_(1923) */
@@ -843,7 +855,9 @@ td
     background: none !important;
 }
 
-#footer {
+#footer,
+.mw-diff-inline-legend /* https://be.wikipedia.org/w/index.php?title=Новая_зямля_(паэма)&diff=prev&oldid=4680538 */
+{
     display: none !important;
 }
 
