...diff fix color inline

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.35
+@version        1.0.36
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -835,8 +835,12 @@ div[style='background-color:#d4e4f4;'],
 	/* https://be.wikipedia.org/w/index.php?title=Новая_зямля_(паэма)&diff=prev&oldid=4680402 */
 	background: #242 !important;
 }
-.mw-diff-table-prefix .mw-diff-inline-legend .mw-diff-inline-legend-ins {
-	color: #bbb;
+
+.mw-diff-inline-moved del,
+.mw-diff-inline-moved ins,
+.mw-diff-inline-deleted del
+{
+	color: #000;
 }
 
 /* https://be.wikisource.org/wiki/Новая_зямля_(1923) */
