--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.39
+@version        1.0.40
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -276,7 +276,9 @@ cite, /* Wikipedia quote */
 .mw-rcfilters-ui-cell.mw-rcfilters-ui-watchlistTopSectionWidget-watchlistDetails, /* Watchlist description at https://be.wikipedia.org/wiki/Адмысловае:Watchlist?hidepreviousrevisions=1&hidecategorization=1&hideWikibase=1&limit=250&days=3&urlversion=2 */
 #mw-fr-revisiontag-edit, /* History page: text like "The stable version was checked on 21 February 2024. There is 1 pending change awaiting review." https://be.wikipedia.org/w/index.php?title=Новая_зямля_(паэма)&action=history  */
 .mw-pager-navigation-bar, /* History page: nav like (newest | oldest) View (newer 50 | older 50) (20 | 50 | 100 | 250 | 500) https://be.wikipedia.org/w/index.php?title=Новая_зямля_(паэма)&action=history */
-[style='float:right; margin: 0 0 1em 4%; min-width: 22em; width: 28%;'] span /* Right "infobox" https://meta.wikimedia.org/wiki/Grants:Programs/Wikimedia_Community_Fund/Rapid_Fund/Wwwyzzerdd_user_experience_improvements_and_critical_maintenance_(ID:_22024892) */
+[style='float:right; margin: 0 0 1em 4%; min-width: 22em; width: 28%;'] span, /* Right "infobox" https://meta.wikimedia.org/wiki/Grants:Programs/Wikimedia_Community_Fund/Rapid_Fund/Wwwyzzerdd_user_experience_improvements_and_critical_maintenance_(ID:_22024892) */
+[style='text-align:center; font-size:8pt; padding:4pt; line-height:1.25em; color:#000000;'],
+[style='width:45px; height:45px; background:#dddddd; text-align:center; font-size:14pt; font-weight:bold; color:#000000;'] /* Right https://be.wikipedia.org/wiki/Удзельнік:Lš-k. */
 {
 	color: #bbb !important;
 }
