Commons uploading to category that not exists: popup font color

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.46
+@version        1.0.47
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -489,7 +489,8 @@ ol.references li:target, /* Click to source[1] - highlight the source */
 .guider_description, /* Popup with messages like "Welcome to improved Recent Changes filtering" */
 .rt-tooltip cite, /* Popup tooltip on English Wikipedia */
 #ooui-11, /* Popup tooltip on English Wikipedia: preferences */
-.oo-ui-window-frame .oo-ui-labelElement,
+.oo-ui-window-frame .oo-ui-labelElement p, /* Commons popup with text "We recommend that you properly fill in all the fields. Do you want to continue without correcting these warnings?" */
+.oo-ui-window-frame .oo-ui-labelElement li, /* ..."One of the categories lacks a description page. Are you sure you typed the name correctly?" */
 .oo-ui-window-frame .oo-ui-fieldLayout-header .oo-ui-labelElement-label /* "Save your changes" popup with Summary - color of "This is a minor edit" and "Watch this page" */
 { 
     color: #000 !important;
