--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -295,6 +295,7 @@ cite, /* Wikipedia quote */
 .sdms-page-result div:nth-child(2), /* Commons search: found */
 .sdms-search-filters__namespace, /* Commons search: button "Namespace: All" */
 #main-wotw, /* Work-Of-The-Week https://ru.wikipedia.org/wiki/Заглавная_страница */
+.description.mw-content-ltr, /* Top https://commons.wikimedia.org/wiki/Category:Receipts */
 [style='float:right; margin: 0 0 1em 4%; min-width: 22em; width: 28%;'] span, /* Right "infobox" https://meta.wikimedia.org/wiki/Grants:Programs/Wikimedia_Community_Fund/Rapid_Fund/Wwwyzzerdd_user_experience_improvements_and_critical_maintenance_(ID:_22024892) */
 [style='text-align:center; font-size:8pt; padding:4pt; line-height:1.25em; color:#000000;'],
 [style='width:45px; height:45px; background:#dddddd; text-align:center; font-size:14pt; font-weight:bold; color:#000000;'], /* Right https://be.wikipedia.org/wiki/Удзельнік:Lš-k. */
